# model_pkg

./: LICENSE  README.md  boot_django.py  load_tests.py  makemigrations.py  migrate.py  pyproject.toml
model_package/: manage.py
model_package/model_package/: asgi.py  settings.py  urls.py  wsgi.py
src/onboarding/: models.py  tests.py
src/onboarding/migrations/: 0001_initial.py
